비밀번호 초기화 기능(forgot-password) 추가 , spring-boot-starter-mail 추가

--- a/src/main/resources/deployment/production/application.properties
+++ b/src/main/resources/deployment/production/application.properties
@@ -1,14 +1,24 @@
 
 spring.h2.console.enabled=true
+server.port=8080
 
 #postgres config
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.url=
-spring.datasource.driver-class-name=org.postgresql.Driver
-
 
 #hibernate config
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
+
+#springMail
+spring.mail.host=s
+spring.mail.port=
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.auth=true
+
+#
+my.app.domain.address=http://localhost:8080
